fix: fix align

--- a/src/components/AppFrame/AppFrame.module.css
+++ b/src/components/AppFrame/AppFrame.module.css
@@ -1,27 +1,6 @@
-.appFrame {
-    display: flex;
-}
-
-.content {
-    flex-grow: 1;
-    padding: 20px;
-}
-
-.navbar {
-    position: fixed;
-    width: rem(80px);
-    height: rem(700px);
-    padding: var(--mantine-spacing-md);
-    display: flex;
-    flex-shrink: 0;
-    flex-direction: column;
-    border-right: rem(1px) solid
-        light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
-}
-
 .navbarMain {
     flex: 1;
-    margin-top: rem(50px);
+    margin-top: rem(10px);
 }
 
 .customLabel {
